--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1 class="text-center">{{ title }}</h1>
-
+<div class="container">
+  <app-employee-list></app-employee-list>
+</div>
 <router-outlet></router-outlet>
