--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
         >Employee List</a
       >
     </li>
+    <li class="nav-item">
+      <a routerLink="create-employee" class="nav-link">Create Employee</a>
+    </li>
   </ul>
 </nav>
 
