--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,9 @@
       >
     </li>
     <li class="nav-item">
-      <a routerLink="create-employee" class="nav-link">Create Employee</a>
+      <a routerLink="create-employee" routerLinkActive="active" class="nav-link"
+        >Create Employee</a
+      >
     </li>
   </ul>
 </nav>
