--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,1 +1,36 @@
-<p>create-employee works!</p>
+<div class="col-md-6 offset-md-3">
+  <h3>Create Employee</h3>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label>first name</label>
+      <input
+        type="text"
+        class="form-control"
+        name="firstName"
+        id="firstName"
+        [(ngModel)]="employee.firstName"
+      />
+    </div>
+    <div class="form-group">
+      <label>last name</label>
+      <input
+        type="text"
+        class="form-control"
+        name="lastName"
+        id="lastName"
+        [(ngModel)]="employee.lastName"
+      />
+    </div>
+    <div class="form-group">
+      <label>email Id</label>
+      <input
+        type="text"
+        class="form-control"
+        name="emailId"
+        id="emailId"
+        [(ngModel)]="employee.emailId"
+      />
+    </div>
+    <button class="btn btn-success" type="submit">create employee</button>
+  </form>
+</div>
