--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -17,6 +17,13 @@
         <button class="btn btn-info" (click)="updateEmployee(emp.id)">
           update
         </button>
+        <button
+          class="btn btn-danger"
+          style="margin-left: 10px"
+          (click)="deleteEmployee(emp.id)"
+        >
+          delete
+        </button>
       </td>
     </tr>
   </tbody>
