--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -24,6 +24,13 @@
         >
           delete
         </button>
+        <button
+          class="btn btn-info"
+          style="margin-left: 10px"
+          (click)="employeeDetails(emp.id)"
+        >
+          view
+        </button>
       </td>
     </tr>
   </tbody>
